--- a/arkanoid.html
+++ b/arkanoid.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Арканоид 3000</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -12,12 +15,12 @@
         }
 
         body {
-            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
+            background: linear-gradient(135deg, #0d0d1a 0%, #1a1a3e 50%, #0a2647 100%);
             min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Unbounded', sans-serif;
             overflow: hidden;
         }
 
@@ -25,42 +28,75 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 15px;
+            gap: 20px;
+        }
+
+        .game-title {
+            font-size: 42px;
+            font-weight: 900;
+            background: linear-gradient(135deg, #00d4ff 0%, #7c3aed 50%, #ff006e 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-transform: uppercase;
+            letter-spacing: 4px;
+            text-shadow: 0 0 40px rgba(0, 212, 255, 0.5);
+            filter: drop-shadow(0 0 20px rgba(124, 58, 237, 0.5));
+            margin-bottom: 5px;
         }
 
         .header {
             display: flex;
             justify-content: space-between;
             width: 800px;
-            padding: 10px 20px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            backdrop-filter: blur(10px);
+            padding: 15px 25px;
+            background: linear-gradient(135deg, rgba(0, 212, 255, 0.1) 0%, rgba(124, 58, 237, 0.1) 100%);
+            border-radius: 15px;
+            backdrop-filter: blur(15px);
+            border: 1px solid rgba(0, 212, 255, 0.3);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
         }
 
         .stat {
-            color: #fff;
-            font-size: 18px;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            color: #e0e0e0;
+            font-size: 14px;
+            font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
         .stat span {
             color: #00d4ff;
-            font-weight: bold;
+            font-weight: 700;
+            font-size: 16px;
+            text-shadow: 0 0 15px rgba(0, 212, 255, 0.8);
         }
 
         #gameCanvas {
-            border: 3px solid #00d4ff;
-            border-radius: 10px;
-            box-shadow: 0 0 30px rgba(0, 212, 255, 0.3),
-                        inset 0 0 50px rgba(0, 0, 0, 0.5);
-            background: linear-gradient(180deg, #0a0a1a 0%, #1a1a3a 100%);
+            border: 2px solid transparent;
+            border-radius: 15px;
+            background: linear-gradient(180deg, #0a0a1a 0%, #12122a 100%);
+            box-shadow: 0 0 0 2px rgba(0, 212, 255, 0.5),
+                        0 0 40px rgba(0, 212, 255, 0.2),
+                        0 0 80px rgba(124, 58, 237, 0.1),
+                        inset 0 0 60px rgba(0, 0, 0, 0.5);
         }
 
         .controls {
-            color: #aaa;
-            font-size: 14px;
+            color: #888;
+            font-size: 11px;
             text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.5px;
+            background: rgba(0, 0, 0, 0.3);
+            padding: 12px 25px;
+            border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .controls span {
+            color: #00d4ff;
+            font-weight: 600;
         }
 
         .modal {
@@ -69,7 +105,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.8);
+            background: rgba(0, 0, 0, 0.9);
+            backdrop-filter: blur(10px);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -77,46 +114,88 @@
         }
 
         .modal-content {
-            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
-            padding: 40px;
-            border-radius: 20px;
+            background: linear-gradient(145deg, #1a1a2e 0%, #0d0d1a 100%);
+            padding: 50px 60px;
+            border-radius: 25px;
             text-align: center;
-            border: 2px solid #00d4ff;
-            box-shadow: 0 0 50px rgba(0, 212, 255, 0.5);
-            max-width: 400px;
+            border: 2px solid transparent;
+            background-clip: padding-box;
+            position: relative;
+            max-width: 450px;
+            box-shadow: 0 25px 80px rgba(0, 0, 0, 0.5),
+                        0 0 0 2px rgba(0, 212, 255, 0.4),
+                        0 0 60px rgba(0, 212, 255, 0.2),
+                        0 0 100px rgba(124, 58, 237, 0.1);
+        }
+
+        .modal-content::before {
+            content: '';
+            position: absolute;
+            top: -2px;
+            left: -2px;
+            right: -2px;
+            bottom: -2px;
+            background: linear-gradient(135deg, #00d4ff, #7c3aed, #ff006e, #00d4ff);
+            border-radius: 27px;
+            z-index: -1;
+            animation: borderGlow 3s linear infinite;
+        }
+
+        @keyframes borderGlow {
+            0%, 100% { opacity: 0.7; }
+            50% { opacity: 1; }
         }
 
         .modal h2 {
-            color: #00d4ff;
-            font-size: 32px;
-            margin-bottom: 20px;
-            text-shadow: 0 0 20px rgba(0, 212, 255, 0.8);
+            font-size: 28px;
+            font-weight: 800;
+            margin-bottom: 25px;
+            background: linear-gradient(135deg, #00d4ff 0%, #7c3aed 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-transform: uppercase;
+            letter-spacing: 3px;
         }
 
         .modal p {
-            color: #fff;
-            font-size: 18px;
-            margin-bottom: 15px;
+            color: #c0c0c0;
+            font-size: 14px;
+            margin-bottom: 12px;
+            font-weight: 400;
+            line-height: 1.6;
+        }
+
+        .modal p span {
+            color: #00d4ff;
+            font-weight: 600;
         }
 
         .modal button {
-            background: linear-gradient(135deg, #00d4ff 0%, #0099cc 100%);
+            background: linear-gradient(135deg, #00d4ff 0%, #7c3aed 100%);
             color: #fff;
             border: none;
-            padding: 15px 40px;
-            font-size: 18px;
-            border-radius: 30px;
+            padding: 16px 50px;
+            font-size: 14px;
+            font-family: 'Unbounded', sans-serif;
+            border-radius: 50px;
             cursor: pointer;
-            margin-top: 20px;
-            transition: all 0.3s ease;
+            margin-top: 25px;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             text-transform: uppercase;
-            font-weight: bold;
-            letter-spacing: 2px;
+            font-weight: 700;
+            letter-spacing: 3px;
+            box-shadow: 0 10px 30px rgba(0, 212, 255, 0.3);
         }
 
         .modal button:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 30px rgba(0, 212, 255, 0.8);
+            transform: translateY(-3px) scale(1.02);
+            box-shadow: 0 15px 40px rgba(0, 212, 255, 0.5),
+                        0 0 30px rgba(124, 58, 237, 0.3);
+        }
+
+        .modal button:active {
+            transform: translateY(0) scale(0.98);
         }
 
         .hidden {
@@ -138,54 +217,119 @@
             color: #fff;
             font-weight: bold;
         }
+
+        .subtitle {
+            font-size: 12px;
+            color: #7c3aed;
+            font-weight: 500;
+            letter-spacing: 5px;
+            text-transform: uppercase;
+            margin-bottom: 20px;
+        }
+
+        .features {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+
+        .feature {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 5px;
+        }
+
+        .feature-icon {
+            font-size: 24px;
+        }
+
+        .feature-text {
+            font-size: 10px;
+            color: #888;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .level-badge {
+            display: inline-block;
+            background: linear-gradient(135deg, #7c3aed 0%, #ff006e 100%);
+            padding: 8px 20px;
+            border-radius: 20px;
+            font-size: 11px;
+            font-weight: 600;
+            color: #fff;
+            margin-bottom: 15px;
+            letter-spacing: 2px;
+        }
     </style>
 </head>
 <body>
     <div class="game-container">
+        <div class="game-title">Арканоид 3000</div>
         <div class="header">
-            <div class="stat">Уровень: <span id="level">1</span>/3000</div>
-            <div class="stat">Счёт: <span id="score">0</span></div>
+            <div class="stat">Уровень: <span id="level">1</span> / 3000</div>
+            <div class="stat">Очки: <span id="score">0</span></div>
             <div class="stat">Жизни: <span id="lives">3</span></div>
             <div class="stat">Рекорд: <span id="highscore">0</span></div>
         </div>
         <canvas id="gameCanvas" width="800" height="600"></canvas>
         <div class="controls">
-            Управление: Мышь или стрелки влево/вправо | Пробел - пауза | R - рестарт уровня
+            <span>Мышь</span> или <span>←→</span> — движение | <span>Пробел</span> — пауза | <span>R</span> — рестарт уровня | <span>Клик</span> — запуск мяча
         </div>
     </div>
 
     <div id="startModal" class="modal">
         <div class="modal-content">
-            <h2>АРКАНОИД 3000</h2>
-            <p>3000 уникальных уровней!</p>
-            <p>Разбивайте блоки, собирайте бонусы и побейте все рекорды!</p>
-            <button onclick="startGame()">НАЧАТЬ ИГРУ</button>
+            <div class="subtitle">Классическая аркада</div>
+            <h2>Арканоид 3000</h2>
+            <p>Три тысячи уникальных уровней ждут тебя!</p>
+            <p>Разбивай блоки, собирай бонусы и установи новый рекорд!</p>
+            <div class="features">
+                <div class="feature">
+                    <div class="feature-icon">🎮</div>
+                    <div class="feature-text">3000 уровней</div>
+                </div>
+                <div class="feature">
+                    <div class="feature-icon">⭐</div>
+                    <div class="feature-text">8 бонусов</div>
+                </div>
+                <div class="feature">
+                    <div class="feature-icon">💥</div>
+                    <div class="feature-text">6 типов блоков</div>
+                </div>
+            </div>
+            <button onclick="startGame()">Начать игру</button>
         </div>
     </div>
 
     <div id="levelModal" class="modal hidden">
         <div class="modal-content">
-            <h2>УРОВЕНЬ <span id="levelNum">1</span></h2>
-            <p id="levelDesc">Начните своё приключение!</p>
-            <button onclick="startLevel()">ИГРАТЬ</button>
+            <div class="level-badge">Уровень <span id="levelNum">1</span></div>
+            <h2>Приготовься!</h2>
+            <p id="levelDesc">Начни своё приключение!</p>
+            <button onclick="startLevel()">Играть</button>
         </div>
     </div>
 
     <div id="gameOverModal" class="modal hidden">
         <div class="modal-content">
-            <h2>ИГРА ОКОНЧЕНА</h2>
-            <p>Ваш счёт: <span id="finalScore">0</span></p>
+            <div class="subtitle">Конец игры</div>
+            <h2>Игра окончена</h2>
+            <p>Твой счёт: <span id="finalScore">0</span></p>
             <p>Достигнут уровень: <span id="finalLevel">1</span></p>
-            <button onclick="restartGame()">ИГРАТЬ СНОВА</button>
+            <button onclick="restartGame()">Играть снова</button>
         </div>
     </div>
 
     <div id="winModal" class="modal hidden">
         <div class="modal-content">
-            <h2>ПОБЕДА!</h2>
-            <p>Вы прошли все 3000 уровней!</p>
+            <div class="subtitle">Поздравляем!</div>
+            <h2>Полная победа!</h2>
+            <p>Ты прошёл все 3000 уровней!</p>
             <p>Финальный счёт: <span id="winScore">0</span></p>
-            <button onclick="restartGame()">ИГРАТЬ СНОВА</button>
+            <button onclick="restartGame()">Играть снова</button>
         </div>
     </div>
 
@@ -227,14 +371,14 @@
 
         // Типы бонусов
         const powerupTypes = [
-            { type: 'expand', color: '#2ed573', symbol: 'W', effect: 'Широкая платформа' },
-            { type: 'shrink', color: '#ff4757', symbol: 'S', effect: 'Узкая платформа' },
-            { type: 'multiball', color: '#ffa502', symbol: 'M', effect: 'Мультибол' },
-            { type: 'fast', color: '#ff6b81', symbol: 'F', effect: 'Быстрый мяч' },
-            { type: 'slow', color: '#70a1ff', symbol: 'L', effect: 'Медленный мяч' },
+            { type: 'expand', color: '#2ed573', symbol: 'Ш', effect: 'Широкая платформа' },
+            { type: 'shrink', color: '#ff4757', symbol: 'У', effect: 'Узкая платформа' },
+            { type: 'multiball', color: '#ffa502', symbol: 'М', effect: 'Мультимяч' },
+            { type: 'fast', color: '#ff6b81', symbol: 'Б', effect: 'Быстрый мяч' },
+            { type: 'slow', color: '#70a1ff', symbol: 'Т', effect: 'Медленный мяч' },
             { type: 'life', color: '#ff4757', symbol: '+', effect: 'Дополнительная жизнь' },
-            { type: 'laser', color: '#ff0000', symbol: 'Z', effect: 'Лазер' },
-            { type: 'sticky', color: '#ffeaa7', symbol: 'C', effect: 'Липкая платформа' }
+            { type: 'laser', color: '#ff0000', symbol: 'Л', effect: 'Лазер' },
+            { type: 'sticky', color: '#ffeaa7', symbol: 'П', effect: 'Липкая платформа' }
         ];
 
         // Инициализация дисплея
@@ -548,8 +692,8 @@
 
             // Индикатор прочности
             if (brick.maxHits > 1 && brick.hits > 0) {
-                ctx.fillStyle = 'rgba(255, 255, 255, 0.8)';
-                ctx.font = 'bold 12px Arial';
+                ctx.fillStyle = 'rgba(255, 255, 255, 0.9)';
+                ctx.font = 'bold 11px Unbounded';
                 ctx.textAlign = 'center';
                 ctx.fillText(brick.hits, brick.x + brick.width / 2, brick.y + brick.height / 2 + 4);
             }
@@ -572,15 +716,21 @@
         }
 
         function drawPowerup(powerup) {
+            // Свечение бонуса
+            ctx.shadowColor = powerup.color;
+            ctx.shadowBlur = 10;
+
             ctx.beginPath();
-            ctx.roundRect(powerup.x, powerup.y, powerup.width, powerup.height, 3);
+            ctx.roundRect(powerup.x, powerup.y, powerup.width, powerup.height, 5);
             ctx.fillStyle = powerup.color;
             ctx.fill();
             ctx.fillStyle = '#fff';
-            ctx.font = 'bold 12px Arial';
+            ctx.font = 'bold 11px Unbounded';
             ctx.textAlign = 'center';
             ctx.fillText(powerup.symbol, powerup.x + powerup.width / 2, powerup.y + powerup.height / 2 + 4);
             ctx.closePath();
+
+            ctx.shadowBlur = 0;
         }
 
         function drawParticles() {
@@ -784,12 +934,23 @@
 
             // Пауза
             if (paused) {
-                ctx.fillStyle = 'rgba(0, 0, 0, 0.7)';
+                ctx.fillStyle = 'rgba(0, 0, 0, 0.8)';
                 ctx.fillRect(0, 0, canvas.width, canvas.height);
-                ctx.fillStyle = '#00d4ff';
-                ctx.font = 'bold 48px Arial';
+
+                // Градиентный текст для паузы
+                const gradient = ctx.createLinearGradient(canvas.width / 2 - 100, 0, canvas.width / 2 + 100, 0);
+                gradient.addColorStop(0, '#00d4ff');
+                gradient.addColorStop(0.5, '#7c3aed');
+                gradient.addColorStop(1, '#ff006e');
+
+                ctx.fillStyle = gradient;
+                ctx.font = 'bold 52px Unbounded';
                 ctx.textAlign = 'center';
                 ctx.fillText('ПАУЗА', canvas.width / 2, canvas.height / 2);
+
+                ctx.fillStyle = '#888';
+                ctx.font = '14px Unbounded';
+                ctx.fillText('Нажми пробел для продолжения', canvas.width / 2, canvas.height / 2 + 40);
             }
         }
 
@@ -827,22 +988,24 @@
 
         function getLevelDescription(lvl) {
             const descriptions = [
-                'Начните своё приключение!',
+                'Начни своё приключение!',
                 'Разминка окончена!',
                 'Время ускориться!',
-                'Будьте внимательны!',
-                'Собирайте бонусы!',
-                'Взрывные блоки появились!',
+                'Будь внимателен!',
+                'Собирай бонусы!',
+                'Появились взрывные блоки!',
                 'Прочные блоки на горизонте!',
                 'Неразрушимые препятствия!',
-                'Мастерство растёт!',
-                'Вы настоящий профи!'
+                'Твоё мастерство растёт!',
+                'Ты настоящий профи!'
             ];
 
             if (lvl <= 10) return descriptions[lvl - 1];
+            if (lvl % 500 === 0) return `Эпическая веха — ${lvl}! Легенда!`;
             if (lvl % 100 === 0) return `Веха ${lvl}! Невероятно!`;
-            if (lvl % 50 === 0) return 'Полпути к следующей сотне!';
-            if (lvl % 10 === 0) return 'Отличный прогресс!';
+            if (lvl % 50 === 0) return 'Половина пути к следующей сотне!';
+            if (lvl % 25 === 0) return 'Отличный прогресс! Так держать!';
+            if (lvl % 10 === 0) return 'Десяток позади! Вперёд!';
             return `Уровень ${lvl} из 3000`;
         }
 
